Fix SonarQube issues: reduce complexity, add loggers, virtual threads, record patterns, fix tests
- Reduce cognitive complexity in EntryPopOverContentPane (constructor 43→<15,
  appendExtraFields 29→<15, buildTimeInput 26→<15, applyLocalizationAndRTL 16→<15)
  by extracting helper methods; introduce EntryState record to reduce appendExtraFields
  from 8 parameters to 5; replace setAccessible reflection with Platform.runLater CSS
  lookup; use record patterns (instanceof SavedLesson(var id)); Boolean.TRUE/FALSE.equals
  for boxed booleans; Math.clamp; remove all commented-out code; add SLF4J logger
- Reduce cognitive complexity in ChatController (initialize 23→<15) by extracting
  cell factory helpers; use virtual threads; re-interrupt on InterruptedException;
  add logger to previously empty catch blocks
- Reduce cognitive complexity in EventExtraDetailsController (constructor 34→<15,
  setReadOnly 21→<15) by extracting setupGroupRow/setupStudentsRow and three
  replaceXWithLabels helpers; add SLF4J logger; Boolean.FALSE.equals for boxed boolean;
  virtual thread for group loading
- Reduce cognitive complexity in MainAppController (refresh 30→<15,
  loadDataFromDatabase 41→<15, localizeCalendar 17→<15); extract nested try blocks
  into fetchCourses/fetchLessonsForCourse/buildCourseToLessonsMap/populateCalendarEntries;
  extract nested ternaries into resolveStudentUserId; define MESSAGES_BUNDLE constant;
  add SLF4J logger; virtual thread + interrupt for time-update thread
- Fix SourceTrayController: extract resolveCurrentUserId (removes nested ternary);
  add SLF4J logger; Calendar<?> generics; remove unused sectionTitle parameter;
  reduce createGroupsSectionNode complexity (21→<15) via buildGroupChangeListener/
  handleGroupsAdded/rebuildGroupRows helpers
- Fix test files: remove unused Assertions imports; add assertions to empty test
  methods; assertNotNull replaces assertNotEquals(null,id1); correct argument order
  in assertNotEquals; extract List.of() calls b